# ComputablePhenotypeWrapper

./: .gitignore  MANIFEST.in  README.md  file_name.csv  output.json  output.txt  pyproject.toml  run.py  sample_target.json  test  test.db
computable_phenotypes/: api.py  base_loader.py  classification_script_sqlite.sql  cli.py  csv_loader.py  db.py  frontend.py  json_loader.py  notes  preparation_script_mssql.sql  preparation_script_sqlite.sql  script.sql  src.py  utils.py
computable_phenotypes/tests/: msql_src.py  script.sql  src.py
computable_phenotypes/utils/: Patients.py  db.py  utils.py
computable_phenotypes/utils_mssql/: Patients.py  db.py  utils.py
computable_phenotypes/utils_sqlite/: Patients.py  db.py  utils.py
input/: full.csv  full.json  test.json
input_test_data/: sample_input.csv
output/: output.json
ref/: nephroticsyndrome-computablephenotype.sql
